# library/src/main/java/net/mikhailov/books/library/controller/BookApiImpl.java
@@ -3,6 +3,7 @@ package net.mikhailov.books.library.controller;
 import net.mikhailov.books.library.service.BookService;
 import net.mikhailov.books.model.BookDTOFull;
 import net.mikhailov.books.model.BookDTOPost;
+import net.mikhailov.books.model.ISBNResultList;
 import net.mikhailov.books.model.IdDTO;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -23,6 +24,11 @@ public class BookApiImpl implements BooksApi  {
     @Override
     public List<BookDTOFull> getAllBooks() {
         return bookService.getAllBooks();
+    }
+
+    @Override
+    public ISBNResultList initBooks(List<String> isbnList) {
+        return bookService.initBooks(isbnList);
     }
 
     @Override
